# edge-detection-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  main.yml
memecv/src/: edge.rs  lib.rs
src/: edge.rs  lib.rs
